--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ button{
 }
 .calculadora{
     width: 200px;
-    margin-left: 770px;
+    margin-left: 79%;
     margin-top: -100%;
     margin-bottom:47%;
     background-color: #ff6a28;
