--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ button{
 .calculadora{
     width: 200px;
     margin-left: 79%;
-    margin-top: -100%;
+    margin-top: -78%;
     margin-bottom:47%;
     background-color: #ff6a28;
     padding: 15px;
@@ -77,7 +77,7 @@ button{
 #compartilhe{
     font-family: 'Lato', sans-serif;
     margin-top: -10px;
-    margin-left: -100px;
+    margin-left: 65%;
     color:#f95c18;
 }
 
@@ -100,6 +100,7 @@ button{
     color: white;
     text-align: center;
     padding-top: 30px;
+    margin-top: -140px;
 }
 
 .header {
