--- a/style2.css
+++ b/style2.css
@@ -37,19 +37,21 @@ h1{
     font-family: Dosis-Extrabold;
 }
 #inputsearch{
+    width: 220px;
     border-radius: 10px;
     margin-left: -260px;
     margin-top: -47px;
 }
 
 .navheader{
+    width: 0%;
     margin-top: -50px;
     margin-left: 90%;
 }
 
 #login{
     width: 50px;
-    margin-left: 24px;
+    margin-left: -10px;
     margin-top: -24px;
 }
 label{
@@ -136,13 +138,13 @@ label {
 
 .slider{
     margin: 0 auto;
-    width: 700px;
-    height: 300px;
+    width: 70%;
+    height: 30%;
     overflow:hidden;
 }
 
 .slides{
-    width: 404%;
+    width: 400%;
     height: 300px;
     display: flex;
 }
@@ -162,7 +164,7 @@ label {
 
 .manual{
     position: absolute;
-    width: 700px;
+    width: 70%;
     margin-top: -40px;
     display: flex;
     justify-content: center;
@@ -207,7 +209,7 @@ label {
 
 .navigation{
     position: absolute;
-    width: 700px;
+    width: 70%;
     margin-top: 260px;
     display: flex;
     justify-content: center;
