--- a/style2.css
+++ b/style2.css
@@ -19,6 +19,24 @@ body{
     margin-top: -12px;
     color: white;
 }
+#botaosair{
+    width: 0%;
+    margin-top: -32px;
+    margin-left: 97%;
+    color: rgb(255, 230, 0);
+    font-size: 1.1em;
+    font-weight: 700;
+    
+}
+#botaominhasreceitas{
+    width: 0%;
+    margin-top: -3%;
+    margin-left: 89%;
+    color: #f0f0f0;
+    font-size: 1.1em;
+    font-weight: 700;
+    
+}
 h1{
     text-align: center;
     margin-left: 2%;
@@ -51,13 +69,13 @@ h1{
 #inputsearch{
     width: 220px;
     border-radius: 10px;
-    margin-left: -260px;
-    margin-top: -47px;
+    margin-left: 900px;
+    margin-top: -4.4%;
 }
 
-.navheader{
+#remover{
     width: 0%;
-    margin-top: -50px;
+    margin-top: -2%;
     margin-left: 90%;
 }
 
@@ -98,7 +116,12 @@ label{
     flex-wrap: wrap;
     justify-content: space-around;
 }
-
+#minhas-receitas-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    
+}
 .card {
     margin: 10px; 
     text-align: center;
