--- a/style2.css
+++ b/style2.css
@@ -31,24 +31,28 @@ body {
 }
 #minhasreceitas{
     margin-top: -45px;
+    display: flex;
     margin-left: -60px;
+    align-items: center;
+    flex-wrap: wrap;
 }
 #botaosair {
     width: 0%;
-    margin-top: -57px;
-    margin-left: 96.5%;
     color: rgb(255, 230, 0);
     font-size: 1.1em;
     font-weight: 700;
+    left: 95%;
+    top: 19px;
+    position: absolute;
 }
 
 #botaominhasreceitas {
     width: 0%;
-    margin-top: -3%;
-    margin-left: 89%;
     color: #f0f0f0;
     font-size: 1.1em;
     font-weight: 700;
+    position: absolute;
+    left: 88%;
 }
 
 h1 {
