--- a/stylemr.css
+++ b/stylemr.css
@@ -7,13 +7,7 @@ body {
     background-color: #ececec;
 }
 
-#botaosearch {
-    width: 20px;
-    height: 15px;
-    background-size: cover;
-    background-position: center;
-    padding-left: 2px;
-}
+
 
 #botaologin {
     font-family: 'Lato', sans-serif;
@@ -26,20 +20,24 @@ body {
 }
 #botaosair {
     width: 0%;
-    margin-top: -46px;
-    margin-left: 96.5%;
     color: rgb(255, 230, 0);
     font-size: 1.1em;
     font-weight: 700;
+    left: 95%;
+    top: 0.5em;
+    position: absolute;
+    display: flex;
 }
 
 #botaominhasreceitas {
     width: 0%;
-    margin-top: -3%;
-    margin-left: 89%;
     color: #f0f0f0;
     font-size: 1.1em;
     font-weight: 700;
+    position: absolute;
+    left: 87%;
+    display: flex;
+    top:-3px;
 }
 
 h1 {
@@ -99,11 +97,7 @@ label {
     display: flex;
 }
 
-#search {
-    padding: 8px;
-    border-radius: 7px;
-    border-style: hidden;
-}
+
 
 #central {
     margin-top: -4px;
