--- a/style2.css
+++ b/style2.css
@@ -156,7 +156,10 @@ p {
     box-shadow: 0 0 30px #a2a2a2;
     background-color: #f7f7f7;
     border: hidden;    
-    
+    transition: transform 0.3s ease-in-out;
+}
+.card:hover {
+    transform: translateY(-10px);
 }
 .capa {
     border-top-left-radius: 10px;
@@ -171,6 +174,10 @@ p {
     width: 350px;
     height: 219px;
     margin-top: -16.7%;
+    transition: transform 0.3s ease-in-out;
+}
+.capa-mr :hover{
+    transform: translateY(-10px);
 }
 button{
     margin: 10px; 
@@ -181,7 +188,8 @@ button{
     border-radius: 10px;
     box-shadow: 0 0 30px #a2a2a2;
     background-color: #f7f7f7;
-    border: hidden;    
+    border: hidden; 
+    transition: transform 0.3s ease-in-out;      
 }
 .nome-receita {
     color: #e57c3a;
