--- a/style2.css
+++ b/style2.css
@@ -169,7 +169,6 @@ p {
     height: 219px;
 }
 .capa-mr{
-    margin-left: -6px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     width: 350px;
@@ -190,7 +189,8 @@ button{
     box-shadow: 0 0 30px #a2a2a2;
     background-color: #f7f7f7;
     border: hidden; 
-    transition: transform 0.3s ease-in-out;      
+    transition: transform 0.3s ease-in-out;
+    padding: 0px;      
 }
 .nome-receita {
     color: #e57c3a;
