--- a/stylelogin.css
+++ b/stylelogin.css
@@ -195,3 +195,14 @@ body{
 .container.active .slide-right{
     transform: translateX(200%);
 }
+@media screen and (max-width: 500px) {
+h1 {
+    display: block;
+    font-size: 1.6em;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+}
