--- a/stylelogin.css
+++ b/stylelogin.css
@@ -206,3 +206,25 @@ h1 {
     font-weight: bold;
 }
 }
+@media screen and (max-width: 370px) {
+    h1 {
+        display: block;
+        font-size: 1.2em;
+        margin-block-start: 0.67em;
+        margin-block-end: 0.67em;
+        margin-inline-start: 0px;
+        margin-inline-end: 0px;
+        font-weight: bold;
+    }
+}
+@media screen and (max-width: 306px) {
+    h1 {
+        display: block;
+        font-size: 1.1em;
+        margin-block-start: 0.67em;
+        margin-block-end: 0.67em;
+        margin-inline-start: 0px;
+        margin-inline-end: 0px;
+        font-weight: bold;
+    }
+    }
